<resources>
    <string name="app_name">gogoEat</string>
    <string name="app_title">gogoEat</string>

    <string name="text_is_open">營業中</string>
    <string name="text_is_not_open">休息中</string>
    <string name="location_error">取得位置發生異常</string>
    <string name="no_location_permission">請開啟位置權限</string>
    <string name="result_dialog_title">今天就決定吃</string>
    <string name="result_dialog_back">再想想</string>
    <string name="result_dialog_go_map">立即前往</string>
    <string name="search_hint">關鍵字搜尋</string>
    <string name="collapse_title">附近餐廳</string>
    <string name="collapse_title_more">更多 ></string>
    <string name="distance">距離</string>
    <string name="price">價位</string>
    <string name="only_choose_open">只選擇營業中</string>
    <string name="only_choose_restaurant">只尋找餐廳相關</string>
    <string name="search">搜尋</string>
    <string name="search_reset">重設</string>
    <string name="is_open">營業中</string>
    <string name="is_restaurant">餐廳</string>
    <string name="is_not_restaurant">所有店家</string>
    <string name="meter_radius">%1$d公尺內</string>
    <string name="click_again_back">再按一次退出</string>
    <string name="rcy_no_data">暫無資料</string>
</resources>