<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sam.gogoeat.view.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".view.search.SearchFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_search_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/frame_search_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            isSelected="@{viewModel.keyFocus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_word"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_hint"
                android:text="@={viewModel.keyWordStr}"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/orange"
                android:textColorHint="@color/gray_999999"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_search_bar"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/distance"
                android:textColor="@color/black_4F4F4F"
                android:textSize="18sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="500.0"
                android:theme="@style/SliderTheme"
                android:valueFrom="1000.0"
                android:valueTo="5000.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_distance_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/orange"
                android:textSize="18sp"
                tools:text="1000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_distance"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/price"
                android:textColor="@color/black_4F4F4F"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_price"
                android:layout_width="120dp"
                android:layout_height="60dp"
                isSelected="@{viewModel.priceFocus}"
                android:background="@drawable/frame_price_selector">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:textColor="@color/black_4F4F4F"
                    android:textSize="16sp"
                    android:text="@{viewModel.priceStr}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_triangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="低價位" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_triangle"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_triangle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="6dp"
            android:text="@string/only_choose_open"
            android:textColor="#6d6d77"
            android:textSize="16sp"
            android:theme="@style/CheckBoxTheme"
            android:checked="@={viewModel.onlyOpen}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_price" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="6dp"
            android:text="@string/only_choose_restaurant"
            android:textColor="#6d6d77"
            android:textSize="16sp"
            android:theme="@style/CheckBoxTheme"
            android:checked="@={viewModel.onlyRestaurant}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_open" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_restaurant">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_reset"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/frame_search_clean"
                android:gravity="center"
                android:letterSpacing="0.3"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/search_reset"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_search"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:background="@drawable/frame_search_btn"
                android:gravity="center"
                android:letterSpacing="0.3"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/search"
                android:textColor="@color/white_FDF8F8"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>